--- a/countdown.html
+++ b/countdown.html
@@ -9,11 +9,11 @@
     }
 
     #days, #hours, #minutes, #seconds {
-      font-size: 4em;
+      font-size: 22vw;
     }
 
     #daysText, #hoursText, #minutesText, #secondsText {
-      font-size: 1.4em;
+      font-size: 8vw;
     }
   </style>
 
