--- a/countdown.html
+++ b/countdown.html
@@ -8,12 +8,22 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
+    body {
+      background-color: #282c34;
+    }
+
     #days, #hours, #minutes, #seconds {
       font-size: 22vw;
+      color: #b4b6b4;
+      text-shadow:1px 1px 0px #000;
+      font-family: "Courier New", Courier, monospace;
     }
 
     #daysText, #hoursText, #minutesText, #secondsText {
       font-size: 8vw;
+      color: #46ccd1;
+      margin-left: 0.2em;
+      text-shadow:1px 1px 0px #000;
     }
   </style>
 
