--- a/countdown.html
+++ b/countdown.html
@@ -41,8 +41,7 @@
           var now = new Date();
           var distance = end - now;
           if (distance < 0) {
-              clearInterval(timer);
-              document.getElementById('countdown').innerHTML = 'EXPIRED!';
+              document.getElementById('days').innerHTML       = ":-*";
               return;
           }
           var days = Math.floor(distance / _day);
