--- a/countdown.html
+++ b/countdown.html
@@ -42,6 +42,7 @@
           var distance = end - now;
           if (distance < 0) {
               document.getElementById('days').innerHTML       = ":-*";
+              document.getElementById('days').style.color     = "#c678dd";
               return;
           }
           var days = Math.floor(distance / _day);
