--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Hallo Welt.</title>
   </head>
   <body>
-    <h1>Hallo Welt.</h1>
+    <header>
+      <a href="#">michael-123</a>
+      <nav>
+        <ul>
+          <li><a href="#spotifyNotificationTweeter">Spotify Notificiation Tweeter</a></li>
+          <li><a href="#tutorialsAndCodeSnippets">Tutorials and Code Snippets</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="spotifyNotificationTweeter">
+        <header><h1>Spotify Notification Tweeter</h1></header>
+        <main>Lorem ipsum.</main>
+      </section>
+      <section id="tutorialsAndCodeSnippets">
+        <header><h1>Tutorials and Code Snippets</h1></header>
+        <main>Lorem ipsum 2.</main>
+      </section>
+    </main>
+    <footer>
+      2016
+    </footer>
   </body>
 </html>
