--- a/trvmp.html
+++ b/trvmp.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Title of the document</title>
+<title>Be great - be like Trump!</title>
 </head>
 
 <body>
   <h1>Who is the real Donald J. Trump?</h1>
-  Click on this perfect picture and make a good desition - very good desition.
+  Click on this really great picture and make a good decision - very good decision.
   <a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">
-    <img src="trvmp.jpg" />
+    <img src="https://michael-123.github.io/images.trvmp.jpg" />
   </a>
 </body>
 
