--- a/trvmp.html
+++ b/trvmp.html
@@ -1,16 +1,19 @@
  <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Be great - be like Trump!</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<title>Be great - be like Trump!</title>
 </head>
 
 <body>
-  <h1>Who is the real Donald J. Trump?</h1>
-  Click on this really great picture and make a good decision - very good decision.
-  <a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">
-    <img src="https://michael-123.github.io/images.trvmp.jpg" />
-  </a>
+	<h1>Who is the real Donald J. Trump?</h1>
+	<p>Click on this really great picture - such a great picture - and help making that decision.</p>
+	<p>
+		<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">
+    			<img src="https://michael-123.github.io/images.trvmp.jpg" />
+		</a>
+	</p>
 </body>
 
 </html> 
