Alt text added.

--- a/trvmp.html
+++ b/trvmp.html
@@ -11,7 +11,7 @@
 	<p>Click on this really great picture - such a great picture - and help making that decision.</p>
 	<p>
 		<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">
-    			<img src="https://michael-123.github.io/images/trvmp.jpg" />
+    			<img src="https://michael-123.github.io/images/trvmp.jpg" alt="Click me." />
 		</a>
 	</p>
 </body>
