--- a/trvmp.html
+++ b/trvmp.html
@@ -8,12 +8,10 @@
 
 <body>
 	<h1>Who is the real Donald J. Trump?</h1>
-	<p>Click on this really great picture - such a great picture - and help making that decision.</p>
-	<p>
-		<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">
-    			<img style="max-width: 100%; height: auto; width: auto;" src="https://michael-123.github.io/images/trvmp.jpg" alt="Click me." />
-		</a>
-	</p>
+	<ul>
+		<li><a href="https://goo.gl/forms/mFonzRzxQXYeKeEp1">Formular</a></li>
+		<li><a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Auswertung</a></li>
+	</ul>
 </body>
 
 </html> 
