Auswertung mit angehängt

--- a/trvmp.html
+++ b/trvmp.html
@@ -10,8 +10,14 @@
 	<h1>Who is the real Donald J. Trump?</h1>
 	<ul>
 		<li><a href="https://goo.gl/forms/mFonzRzxQXYeKeEp1">Formular</a></li>
-		<li><a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Auswertung</a></li>
+		<li>
+			<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Alle Ergebnisse</a><br>
+			<iframe style="width: 50%;" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+		</li>
 	</ul>
+	<p>
+		<img src="images/trvmp.jpg" alt="TRVMP" />
+	</p>
 </body>
 
 </html> 
