Auswertung mit angehängt

--- a/trvmp.html
+++ b/trvmp.html
@@ -8,15 +8,15 @@
 
 <body>
 	<h1>Who is the real Donald J. Trump?</h1>
+	<iframe style="width: 100%;" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 	<ul>
 		<li><a href="https://goo.gl/forms/mFonzRzxQXYeKeEp1">Formular</a></li>
 		<li>
 			<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Alle Ergebnisse</a><br>
-			<iframe style="width: 50%;" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 		</li>
 	</ul>
 	<p>
-		<img src="images/trvmp.jpg" alt="TRVMP" />
+		<img style="width:auto; height:auto; max-width:100%; max-height:90%;" src="images/trvmp.jpg" alt="TRVMP" />
 	</p>
 </body>
 
