--- a/trvmp.html
+++ b/trvmp.html
@@ -5,8 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>Be great - be like Trump!</title>
 	<style>
-
-		/* Make it a marquee */
+		/* see: http://jsfiddle.net/jonathansampson/XxUXD/ */
 		.marquee {
 		    width: 100%;
 		    margin: 0 auto;
@@ -15,12 +14,9 @@
 		    box-sizing: border-box;
 		    animation: marquee 10s linear infinite;
 		}
-
 		.marquee:hover {
 		    animation-play-state: paused
 		}
-
-		/* Make it move */
 		@keyframes marquee {
 		    0%   { text-indent: 100% }
 		    100% { text-indent: -30em }
