--- a/trvmp.html
+++ b/trvmp.html
@@ -11,7 +11,7 @@
 			margin: 0.2em 0em -0.2em 0em;
 		}
 
-		iframe { width: 100% }
+		iframe { width: 100%; height: 47em; }
 	
 		/* Marquee */
 		/* see: http://jsfiddle.net/jonathansampson/XxUXD/ */
@@ -38,15 +38,16 @@
 		<span>Who is the real Donald J. Trump?</span>
 		<img id="emoji" src="#" alt="" />
 	</h1>
-	<iframe src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 	<ul>
 		<li>
 			<a href="https://goo.gl/forms/mFonzRzxQXYeKeEp1">Formular</a>
 		</li>
 		<li>
-			<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Alle Ergebnisse</a><br>
+			<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Alle Ergebnisse</a>
 		</li>
 	</ul>
+	<iframe src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+	
 	<script>
 		function getRandomEmojiURL() {
 			// see: http://www.trumpoji.com/presskit/
