--- a/trvmp.html
+++ b/trvmp.html
@@ -10,8 +10,6 @@
 			height: 1em; 
 			margin: 0.2em 0em -0.2em 0em;
 		}
-
-		iframe { width: 100%; height: 47em; }
 	
 		/* Marquee */
 		/* see: http://jsfiddle.net/jonathansampson/XxUXD/ */
@@ -46,7 +44,15 @@
 			<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Alle Ergebnisse</a>
 		</li>
 	</ul>
-	<iframe src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+
+	<!-- Quote -->
+	<iframe style="width: 290px;" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+	<!-- Trend Andi -->	
+	<iframe width="282" height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=1166359508&amp;format=image"></iframe>
+	<!-- Trend Duni -->
+	<iframe width="281" height="191" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=2032484372&amp;format=image"></iframe>
+	<!-- Trend Moik -->
+	<iframe width="282" height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=802846629&amp;format=image"></iframe>
 	
 	<script>
 		function getRandomEmojiURL() {
