--- a/trvmp.html
+++ b/trvmp.html
@@ -46,14 +46,17 @@
 	</ul>
 
 	<!-- Quote -->
-	<iframe style="width: 290px;" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-	<!-- Trend Andi -->	
-	<iframe width="282" height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=1166359508&amp;format=image"></iframe>
-	<!-- Trend Duni -->
-	<iframe width="281" height="191" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=2032484372&amp;format=image"></iframe>
-	<!-- Trend Moik -->
-	<iframe width="282" height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=802846629&amp;format=image"></iframe>
-	
+	<p>
+		<iframe width="290" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+	</p>
+	<p>
+		<!-- Trend Andi -->	
+		<iframe width="282" height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=1166359508&amp;format=image"></iframe>
+		<!-- Trend Duni -->
+		<iframe width="281" height="191" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=2032484372&amp;format=image"></iframe>
+		<!-- Trend Moik -->
+		<iframe width="282" height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=802846629&amp;format=image"></iframe>
+	</p>
 	<script>
 		function getRandomEmojiURL() {
 			// see: http://www.trumpoji.com/presskit/
