Touch icon hinzugefügt.

--- a/trvmp.html
+++ b/trvmp.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<link rel="apple-touch-icon" href="trvmp_images/trvmp_icon.png"/>
+	<link rel="shortcut icon" href="trvmp_images/trvmp_icon.png">
+	
 	<title>Be great - be like Trump!</title>
 	<style>
 		h1 { font-size: 400% }
