--- a/trvmp.html
+++ b/trvmp.html
@@ -50,7 +50,13 @@
 
 	<!-- Quote -->
 	<p>
+		<!-- Quote -->
 		<iframe width="290" height="175" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+		<!-- Games -->
+		<iframe width="290" height="175" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1099523012&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+		<!-- Goals -->
+		<iframe width="290" height="175" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=366720422&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+	
 	</p>
 	<p>
 		<!-- Trend Andi -->	
