--- a/trvmp.html
+++ b/trvmp.html
@@ -66,6 +66,10 @@
 		<!-- Trend Moik -->
 		<iframe width="290" height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=802846629&amp;format=interactive"></iframe>
 	</p>
+	<p>
+		<!-- Spielanteil -->
+		<iframe width="355.5" height="344.7208333333333" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=1346588981&amp;format=interactive"></iframe>
+	</p>
 	<script>
 		function getRandomEmojiURL() {
 			// see: http://www.trumpoji.com/presskit/
