--- a/trvmp.html
+++ b/trvmp.html
@@ -31,6 +31,10 @@
 			0%   { text-indent: 100% }
 			100% { text-indent: -25em }
 		}
+
+		iframe {
+			width: 290px;
+		}
 	</style>
 </head>
 
@@ -51,20 +55,20 @@
 	<!-- Quote -->
 	<p>
 		<!-- Quote -->
-		<iframe width="290" height="175" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+		<iframe height="182" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 		<!-- Games -->
-		<iframe width="290" height="175" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1099523012&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+		<iframe height="182" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1099523012&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 		<!-- Goals -->
-		<iframe width="290" height="175" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1477281783&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+		<iframe height="182" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1477281783&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
 	</p>
 	<p>
 		<!-- Trend Andi -->	
-		<iframe width="290" height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=1166359508&amp;format=interactive"></iframe>
+		<iframe height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=1166359508&amp;format=interactive"></iframe>
 		<!-- Trend Duni -->
-		<iframe width="290" height="191" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=2032484372&amp;format=interactive"></iframe>
+		<iframe height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=2032484372&amp;format=interactive"></iframe>
 		<!-- Trend Moik -->
-		<iframe width="290" height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=802846629&amp;format=interactive"></iframe>
+		<iframe height="189" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubchart?oid=802846629&amp;format=interactive"></iframe>
 	</p>
 	<p>
 		<!-- Spielanteil -->
