--- a/countdown.html
+++ b/countdown.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <link rel="apple-touch-icon" href="countdown_images/touch_icon.png"/>
+  <link rel="shortcut icon" href="countdown_images/touch_icon.png">
   <title>Countdown</title>
 
   <style>
