--- a/trvmp.html
+++ b/trvmp.html
@@ -8,28 +8,9 @@
 	
 	<title>Be great - be like Trump!</title>
 	<style>
-		h1 { font-size: 400% }
 		h1 img {
 			height: 1em; 
 			margin: 0.2em 0em -0.2em 0em;
-		}
-	
-		/* Marquee */
-		/* see: http://jsfiddle.net/jonathansampson/XxUXD/ */
-		.marquee {
-			width: 100%;
-			margin: 0 auto;
-			overflow: hidden;
-			white-space: nowrap;
-			box-sizing: border-box;
-			animation: marquee 10s linear infinite;
-		}
-		.marquee:hover {
-			animation-play-state: paused
-		}
-		@keyframes marquee {
-			0%   { text-indent: 100% }
-			100% { text-indent: -25em }
 		}
 
 		iframe {
@@ -39,19 +20,25 @@
 </head>
 
 <body>
-	<h1 class="marquee">
+	<h1>
 		<span>Who is the real Donald J. Trump?</span>
 		<img id="emoji" src="#" alt="" />
 	</h1>
-	<ul>
-		<li>
-			<a href="https://goo.gl/forms/mFonzRzxQXYeKeEp1">Formular</a>
-		</li>
-		<li>
-			<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Alle Ergebnisse</a>
-		</li>
-	</ul>
-
+	<nav>
+		<ul>
+			<li>
+				<a href="https://goo.gl/forms/mFonzRzxQXYeKeEp1">Formular</a>
+			</li>
+			<li>
+				<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Alle Ergebnisse</a>
+			</li>
+		</ul>
+	</nav>
+	<hr>
+	<p>
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScvMhXaDzuzL56S4xsz5mRa4TamDNFZ6IYJD6jySveHLc7UJQ/viewform?embedded=true#start=embed" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Wird geladen...</iframe>
+	</p>
+	<hr>
 	<!-- Quote -->
 	<p>
 		<!-- Quote -->
