--- a/trvmp.html
+++ b/trvmp.html
@@ -30,14 +30,10 @@
 				<a href="https://goo.gl/forms/mFonzRzxQXYeKeEp1">Formular</a>
 			</li>
 			<li>
-				<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Alle Ergebnisse</a>
+				<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Livedaten & Ergebnisse</a>
 			</li>
 		</ul>
 	</nav>
-	<hr>
-	<p>
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScvMhXaDzuzL56S4xsz5mRa4TamDNFZ6IYJD6jySveHLc7UJQ/viewform?embedded=true#start=embed" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Wird geladen...</iframe>
-	</p>
 	<hr>
 	<!-- Quote -->
 	<p>
