--- a/trvmp.html
+++ b/trvmp.html
@@ -35,14 +35,11 @@
 		</ul>
 	</nav>
 	<hr>
-	<!-- Quote -->
 	<p>
 		<!-- Quote -->
-		<iframe height="235" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-		<!-- Games -->
-		<iframe height="235" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1099523012&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-		<!-- Goals -->
-		<iframe height="235" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1477281783&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+		<iframe height="245" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1859972974&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+		<!-- Games and Goals -->
+		<iframe height="245" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=221220647&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
 	</p>
 	<p>
