--- a/trvmp.html
+++ b/trvmp.html
@@ -30,7 +30,7 @@
 				<a href="https://goo.gl/forms/mFonzRzxQXYeKeEp1">Formular</a>
 			</li>
 			<li>
-				<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit?usp=sharing">Livedaten & Ergebnisse</a>
+				<a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1789177478&single=true">Dashboard (live)</a>
 			</li>
 		</ul>
 	</nav>
