--- a/trvmp.html
+++ b/trvmp.html
@@ -39,7 +39,7 @@
     </nav>
     <hr>
     <p>
-	<iframe style="width: 100%; height: 750px;" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1789177478&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+	<iframe id="dashboard" style="width: 100%; height: 750px;" src="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/pubhtml?gid=1789177478&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
         <table id="quote">
         </table>
         <table id="alleToreAlleSpiele">
