--- a/trvmp.html
+++ b/trvmp.html
@@ -30,7 +30,7 @@
     <nav>
         <ul>
             <li>
-                <a href="https://goo.gl/forms/mFonzRzxQXYeKeEp1">Formular</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTKm98Msxt8IbxJDxcEZUBd0rWtImhtdVxqbgvDixo45pIaw/viewform">Formular</a>
             </li>
             <li>
                 <a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit#gid=1789177478">Dashboard (live)</a>
