--- a/trvmp.html
+++ b/trvmp.html
@@ -9,7 +9,7 @@
     <script src="trvmp_meta/jquery-3.1.1.js"></script>
     <script src="trvmp_meta/trvmp.js"></script>
 
-    <title>Be great - be like Trump!</title>
+    <title>FVCK I FERSAGE ARG</title>
     <style>
         h1 img {
             height: 1em;
@@ -24,7 +24,7 @@
 
 <body>
     <h1>
-		<span>Who is the real Donald J. Trump?</span>
+		<span>FVCK I FERSAGE ARG</span>
 		<img id="emoji" src="#" alt="" />
 	</h1>
     <nav>
