--- a/trvmp.html
+++ b/trvmp.html
@@ -19,6 +19,18 @@
         iframe {
             width: 290px;
         }
+	    
+	.button {
+	  font: bold 11px Arial;
+	  text-decoration: none;
+	  background-color: #EEEEEE;
+	  color: #333333;
+	  padding: 2px 6px 2px 6px;
+	  border-top: 1px solid #CCCCCC;
+	  border-right: 1px solid #333333;
+	  border-bottom: 1px solid #333333;
+	  border-left: 1px solid #CCCCCC;
+	}
     </style>
 </head>
 
@@ -30,10 +42,10 @@
     <nav>
         <ul>
             <li>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTKm98Msxt8IbxJDxcEZUBd0rWtImhtdVxqbgvDixo45pIaw/viewform">Formular</a>
+                <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSdTKm98Msxt8IbxJDxcEZUBd0rWtImhtdVxqbgvDixo45pIaw/viewform">Formular</a>
             </li>
             <li>
-                <a href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit#gid=1789177478">Dashboard (live)</a>
+                <a class="button" href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit#gid=1789177478">Dashboard (live)</a>
             </li>
         </ul>
     </nav>
