--- a/trvmp.html
+++ b/trvmp.html
@@ -20,17 +20,19 @@
             width: 290px;
         }
 	    
-	.button {
-	  font: bold 11px Arial;
-	  text-decoration: none;
-	  background-color: #EEEEEE;
-	  color: #333333;
-	  padding: 2px 6px 2px 6px;
-	  border-top: 1px solid #CCCCCC;
-	  border-right: 1px solid #333333;
-	  border-bottom: 1px solid #333333;
-	  border-left: 1px solid #CCCCCC;
-	}
+		.button {
+			margin-right: 2em;
+			display: inline-block;
+			font: bold 0.8em Arial;
+			text-decoration: none;
+			background-color: #EEEEEE;
+			color: #333333;
+			padding: 1em 2em 1em 2em;
+			border-top: 1px solid #CCCCCC;
+			border-right: 1px solid #333333;
+			border-bottom: 1px solid #333333;
+			border-left: 1px solid #CCCCCC;
+		}
     </style>
 </head>
 
@@ -40,14 +42,8 @@
 		<img id="emoji" src="#" alt="" />
 	</h1>
     <nav>
-        <ul>
-            <li>
-                <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSdTKm98Msxt8IbxJDxcEZUBd0rWtImhtdVxqbgvDixo45pIaw/viewform">Formular</a>
-            </li>
-            <li>
-                <a class="button" href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit#gid=1789177478">Dashboard (live)</a>
-            </li>
-        </ul>
+	<a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSdTKm98Msxt8IbxJDxcEZUBd0rWtImhtdVxqbgvDixo45pIaw/viewform">Formular</a>
+	<a class="button" href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit#gid=1789177478">Dashboard (live)</a>
     </nav>
     <hr>
     <p>
