--- a/trvmp.html
+++ b/trvmp.html
@@ -32,6 +32,17 @@
 			border-bottom: 1px solid #333333;
 			border-left: 1px solid #CCCCCC;
 		}
+		
+		.button:hover {
+			background-color: #DDDDDD;
+		}
+		
+		.button:active {
+			border-bottom: 1px solid #CCCCCC;
+			border-left: 1px solid #333333;
+			border-top: 1px solid #333333;
+			border-right: 1px solid #CCCCCC;
+		}
 	</style>
 </head>
 
