--- a/countdown.html
+++ b/countdown.html
@@ -31,7 +31,7 @@
   </style>
 
   <script>
-      var end = new Date('4/15/2019 4:00 PM');
+      var end = new Date('4/15/2019 0:01 AM');
 
       var _second = 1000;
       var _minute = _second * 60;
