--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
         <script src="hoergewohnheiten.js"></script>
+        <link rel="stylesheet" href="hoergewohnheiten.css">
     </head>
     <body>
         <div class="container">
@@ -26,17 +27,12 @@
             <main>
                 <div class="row">
                     <div class="col-sm-8">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th></th>
-                                    <th>Track</th>
-                                    <th>Plays</th>
-                                </tr>
-                            </thead>
-                            <tbody class="table-body">
-                            </tbody>
-                        </table>
+                        <section>
+                            <table class="table table-striped">
+                                <tbody class="table-body">
+                                </tbody>
+                            </table>
+                        </section>
                     </div>
                     <div class="col-sm-4">
                         Asdf.
