--- a/trvmp.html
+++ b/trvmp.html
@@ -52,7 +52,7 @@
 		<img id="emoji" src="#" alt="" />
 	</h1>
 	<nav>
-		<a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSdTKm98Msxt8IbxJDxcEZUBd0rWtImhtdVxqbgvDixo45pIaw/viewform">Formular</a>
+		<a class="button" href="https://andreasden.github.io/?token=aHR0cHM6Ly90cnZtcC1wcm9kLmhlcm9rdWFwcC5jb20=">Formular</a>
 		<a class="button" href="https://docs.google.com/spreadsheets/d/1ZNQqV-Y1xr0v9RiEc5FEN0Wcg8DrRLSuMiknLF9gT-Y/edit#gid=1789177478">Dashboard (live)</a>
 	</nav>
 	<p>
