--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
                     <div class="col-sm-8">
                         <!-- Date Picking -->
                         <div class="row">
-                            <div class="col-sm-4">
-                                <p>From:</p>
-                                <input type="date">
+                            <div class="col-sm-3">
+                                <input type="text" id="user-name">
                             </div>
-                            <div class="col-sm-4">
-                                <p>To:</p>
-                                <input type="date">
+                            <div class="col-sm-3">
+                                <input type="date" id="from-date">
                             </div>
-                            <div class="col-sm-4">
-                                <button type="button" class="btn btn-primary">Primary</button>
+                            <div class="col-sm-3">
+                                <input type="date" id="to-date">
+                            </div>
+                            <div class="col-sm-3">
+                                <button type="button" class="btn btn-primary" id="submit">Submit</button>
                             </div>
                         </div>
                         <div class="row">
