--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script>
+var TOKEN = new URL(window.location.href).searchParams.get('token')
+var SERVICE_URL = atob(TOKEN)
+
 function get(url, callback) {
     $.ajax({
         url: url,
@@ -22,6 +25,7 @@ function get(url, callback) {
 }
 
 function applyTable(data) {
+    $("#die-tabelle table").remove();
     var tableData = data.table
     
     var table = $('<table>').attr('class', 'table table-striped');
@@ -61,14 +65,27 @@ function decryptToken(token) {
 }
 
 function applyData() {
-    var url = new URL(window.location.href);
-    var token = url.searchParams.get('token')
-    var serviceUrl = atob(token)
-    // urlAppendix = getUrlAppendix(userName, fromDate, toDate)
-    get(serviceUrl + '/table', applyTable)
+    get(SERVICE_URL + '/table', applyTable)
+}
+
+function getMonthAppendix() {
+	var date = new Date();
+	var appendix = 'from_month=' + (date.getMonth() + 1) +
+		'&from_year=' + date.getFullYear() +
+		'&to_month='+(date.getMonth() + 2) +
+		'&to_year=' + date.getFullYear()
+	console.log(appendix)
+	return appendix
 }
 
 $(document).ready(function () {
+	$('#all-table').click(function(){
+		get(SERVICE_URL + '/table', applyTable)
+	});
+	$('#month-table').click(function(){
+		var appendix = getMonthAppendix()
+		get(SERVICE_URL + '/table?' + appendix, applyTable)
+	});
     applyData()
 });
 	</script>
@@ -77,6 +94,12 @@ $(document).ready(function () {
         <div class="container">
             <header class="page-header">
                 <h1>TRVMP</h1>
+		<nav class="row">
+			<div class="col-sm-8">
+				<button id="all-table">All</button>
+				<button id="month-table">This Month</button>
+			</div>
+		</nav>
             </header>
             <main>
                 <div class="row">
