--- a/countdown.html
+++ b/countdown.html
@@ -31,7 +31,7 @@
   </style>
 
   <script>
-      var end = new Date('7/21/2018 0:01 AM');
+      var end = new Date('7/20/2018 6:00 PM');
 
       var _second = 1000;
       var _minute = _second * 60;
