--- a/countdown.html
+++ b/countdown.html
@@ -43,7 +43,7 @@
           var now = new Date();
           var distance = end - now;
           if (distance < 0) {
-              document.getElementById('days').innerHTML       = ":-*";
+              document.getElementById('days').innerHTML       = "Perfekto! 🇮🇹";
               document.getElementById('days').style.color     = "#c678dd";
               return;
           }
